# rpmpack

./: .gitignore  .travis.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  cloudbuild.yaml  def.bzl  deps.bzl  dir.go  docker_tests.sh  file_types.go  file_types_test.go  files.go  files_test.go  go.mod  go.sum  header.go  header_test.go  interpreter_test.go  required.go  rpm.go  rpm_test.go  scriptlet_test.go  sense.go  sense_test.go  tags.go  tar.go  tar_test.go
cmd/rpmpack/: main.go
cmd/rpmsample/: BUILD.bazel  main.go
cmd/tar2rpm/: BUILD.bazel  main.go
example_bazel/: BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  allowlist_var_lib_rpmpack.txt  diff_test.sh  dir_allowlist.txt  docker_run.sh  docker_tests.sh  golden_V.txt  golden_ls.txt  testing.bzl
testdata/: content1.txt  golden_ls.txt  golden_preinst.txt
tools/rpmsample/: main.go
