# A build file for rpmpack.
# For running basic build/run/test you can also use the regular go tools,
# this is currently added to assist in external testing.

load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@com_github_google_rpmpack//:def.bzl", "pkg_tar2rpm")
load("//:testing.bzl", "docker_diff")

pkg_tar(
    name = "rpmtest-tar",
    srcs = [":content1.txt"],
    mode = "0644",
    ownername = "root.root",
    package_dir = "var/lib/rpmpack",
)

pkg_tar2rpm(
    name = "rpmtest",
    data = ":rpmtest-tar",
    pkg_name = "rpmtest",
    prein = "echo \"This is preinst\" > /tmp/preinst.txt",
    release = "3.4",
    epoch = 42,
    version = "1.2",
)

container_image(
    name = "centos_with_rpm",
    testonly = True,
    base = "@centos//image",
    directory = "/root/",
    files = [":rpmtest.rpm"],
    legacy_run_behavior = False,
)

docker_diff(
    name = "centos_V",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -Vv rpmtest",
    golden = ":golden_V.txt",
)

docker_diff(
    name = "centos_ls",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && ls -l /var/lib/rpmpack",
    golden = ":golden_ls.txt",
)

docker_diff(
    name = "centos_preinst",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && cat /tmp/preinst.txt",
    golden = ":golden_preinst.txt",
)

docker_diff(
    name = "centos_epoch",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -q rpmtest --queryformat '%{EPOCH}\n'",
    golden = ":golden_Epoch.txt",
)

container_image(
    name = "fedora_with_rpm",
    testonly = True,
    base = "@fedora//image",
    directory = "/root/",
    files = [":rpmtest.rpm"],
    legacy_run_behavior = False,
)

docker_diff(
    name = "fedora_V",
    base = ":fedora_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -Vv rpmtest",
    golden = ":golden_V.txt",
)

docker_diff(
    name = "fedora_epoch",
    base = ":fedora_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -q rpmtest --queryformat '%{EPOCH}\n'",
    golden = ":golden_Epoch.txt",
)

pkg_tar(
    name = "rpmmetatest-tar",
)

pkg_tar2rpm(
    name = "rpmmetatest",
    data = ":rpmmetatest-tar",
    pkg_name = "rpmmetatest",
    release = "3.4",
    epoch = 42,
    version = "1.2",
    requires = ["bash"],
)

container_image(
    name = "centos_with_metarpm",
    testonly = True,
    base = "@centos//image",
    directory = "/root/",
    files = [":rpmmetatest.rpm"],
    legacy_run_behavior = False,
)

docker_diff(
    name = "centos_meta_deps",
    base = ":centos_with_metarpm",
    cmd = "echo ===marker=== && rpm -i /root/rpmmetatest.rpm && rpm -qpR /root/rpmmetatest.rpm",
    golden = ":golden_meta_deps.txt",
)
