# A build file for rpmpack.
# For running basic build/run/test you can also use the regular go tools,
# this is currently added to assist in external testing.

load("@io_bazel_rules_docker//container:container.bzl", "container_image")
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")
load("@com_github_google_rpmpack//:def.bzl", "pkg_tar2rpm")
load("//:testing.bzl", "docker_diff")

pkg_tar(
    name = "rpmtest-tar",
    srcs = [":content1.txt"],
    mode = "0644",
    ownername = "root.root",
    package_dir = "var/lib/rpmpack",
)

pkg_tar(
    name = "rpmtest-tar-otherdir",
    srcs = [":content1.txt"],
    mode = "0644",
    ownername = "root.root",
    package_dir = "/doesnot/exist/rpmpack",
)

pkg_tar(
    name = "rpmtest-tar-bothdirs",
    mode = "0644",
    ownername = "root.root",
    deps = [
        ":rpmtest-tar",
        ":rpmtest-tar-otherdir",
    ],
)

pkg_tar2rpm(
    name = "rpmtest",
    data = ":rpmtest-tar",
    epoch = 42,
    pkg_name = "rpmtest",
    prein = "echo \"This is preinst\" > /tmp/preinst.txt",
    release = "3.4",
    version = "1.2",
)

pkg_tar2rpm(
    name = "rpmtest_withtime",
    build_time = "17",
    data = ":rpmtest-tar",
    pkg_name = "rpmtest_withtime",
    version = "1.2",
)

pkg_tar2rpm(
    name = "rpmtest_bothdirs",
    data = ":rpmtest-tar-bothdirs",
    epoch = 42,
    pkg_name = "rpmtest_bothdirs",
    release = "3.4",
    version = "1.2",
)

pkg_tar2rpm(
    name = "rpmtest_withoutbothdirs",
    data = ":rpmtest-tar-bothdirs",
    pkg_name = "rpmtest_withoutbothdirs",
    use_dir_allowlist = True,
    version = "1.2",
)

pkg_tar2rpm(
    name = "rpmtest_withonlyonedir",
    data = ":rpmtest-tar-bothdirs",
    dir_allowlist_file = ":dir_allowlist.txt",
    pkg_name = "rpmtest_withonlyonedir",
    use_dir_allowlist = True,
    version = "1.2",
)

container_image(
    name = "centos_with_rpm",
    testonly = True,
    base = "@centos//image",
    directory = "/root/",
    files = [
        ":rpmtest.rpm",
        ":rpmtest_bothdirs",
        ":rpmtest_withonlyonedir",
        ":rpmtest_withoutbothdirs",
        ":rpmtest_withtime",
    ],
    legacy_run_behavior = False,
)

docker_diff(
    name = "centos_V",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -Vv rpmtest",
    golden = """
.........    /var
.........    /var/lib
.........    /var/lib/rpmpack
.........    /var/lib/rpmpack/content1.txt""",
)

docker_diff(
    name = "centos_ls",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && ls -l /var/lib/rpmpack",
    golden = """
total 4
-rw-r--r-- 1 root root 22 Jan  1  2000 content1.txt""",
)

docker_diff(
    name = "centos_preinst",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && cat /tmp/preinst.txt",
    golden = "This is preinst",
)

docker_diff(
    name = "centos_epoch",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -q rpmtest --queryformat '%{EPOCH}\n'",
    golden = "42",
)

container_image(
    name = "centos_with_rpmsample_executable",
    testonly = True,
    base = "@centos//image",
    directory = "/root/",
    files = ["@com_github_google_rpmpack//cmd/rpmsample"],
    legacy_run_behavior = False,
)

docker_diff(
    name = "centos_rpmsample_signed",
    base = ":centos_with_rpmsample_executable",
    cmd = "echo ===marker=== && /root/rpmsample -sign > /root/rpmsample.rpm && rpm --nosignature -i /root/rpmsample.rpm && rpm --nosignature -q rpmsample --queryformat '%{SIGPGP}\n'",
    # "74686973206973206e6f742061207369676e6174757265" is "this is not a signature" in hex.
    golden = "74686973206973206e6f742061207369676e6174757265",
)

docker_diff(
    name = "centos_rpmsample_ghost_provides",
    base = ":centos_with_rpmsample_executable",
    cmd = "echo ===marker=== && /root/rpmsample > /root/rpmsample.rpm && rpm -i /root/rpmsample.rpm && rpm -q --whatprovides /var/lib/rpmpack/sample4_ghost.txt",
    golden = "rpmsample-0.1-A.noarch",
)

docker_diff(
    name = "centos_rpmsample_ghost_not_on_fs",
    base = ":centos_with_rpmsample_executable",
    cmd = "echo ===marker=== && /root/rpmsample > /root/rpmsample.rpm && rpm -i /root/rpmsample.rpm && ls /var/lib/rpmpack",
    golden = """
sample.txt
sample2.txt
sample3_link.txt
""",
)

docker_diff(
    name = "centos_rpmsample_directory_doesnotexist",
    base = ":centos_with_rpmsample_executable",
    cmd = "echo ===marker=== && /root/rpmsample > /root/rpmsample.rpm && rpm -i /root/rpmsample.rpm && cat /var/lib/thisdoesnotexist/sample.txt",
    golden = """
testsample
""",
)

container_image(
    name = "fedora_with_rpm",
    testonly = True,
    base = "@fedora//image",
    directory = "/root/",
    files = [":rpmtest.rpm"],
    legacy_run_behavior = False,
)

docker_diff(
    name = "fedora_V",
    base = ":fedora_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -Vv rpmtest",
    golden = """
.........    /var
.........    /var/lib
.........    /var/lib/rpmpack
.........    /var/lib/rpmpack/content1.txt""",
)

docker_diff(
    name = "fedora_epoch",
    base = ":fedora_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest.rpm && rpm -q rpmtest --queryformat '%{EPOCH}\n'",
    golden = "42",
)

pkg_tar(
    name = "rpmmetatest-tar",
)

pkg_tar2rpm(
    name = "rpmmetatest",
    data = ":rpmmetatest-tar",
    epoch = 42,
    pkg_name = "rpmmetatest",
    release = "3.4",
    requires = ["bash"],
    version = "1.2",
)

container_image(
    name = "centos_with_metarpm",
    testonly = True,
    base = "@centos//image",
    directory = "/root/",
    files = [":rpmmetatest.rpm"],
    legacy_run_behavior = False,
)

docker_diff(
    name = "centos_meta_deps",
    base = ":centos_with_metarpm",
    cmd = "echo ===marker=== && rpm -i /root/rpmmetatest.rpm && rpm -qpR /root/rpmmetatest.rpm",
    golden = "bash",
)

docker_diff(
    name = "centos_empty_timestamp",
    base = ":centos_with_rpm",
    cmd = "echo ===marker=== && rpm -i /root/rpmtest.rpm && rpm -q rpmtest --queryformat '%{BUILDTIME}\n'",
    golden = "(none)",
)

docker_diff(
    name = "centos_with_timestamp",
    base = ":centos_with_rpm",
    cmd = "echo ===marker=== && rpm -i /root/rpmtest_withtime.rpm && rpm -q rpmtest_withtime --queryformat '%{BUILDTIME}\n'",
    golden = "17",
)

docker_diff(
    name = "centos_bothdirs",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i --force /root/rpmtest_bothdirs.rpm && rpm -Vv rpmtest_bothdirs",
    golden = """
.........    /doesnot
.........    /doesnot/exist
.........    /doesnot/exist/rpmpack
.........    /doesnot/exist/rpmpack/content1.txt
.........    /var
.........    /var/lib
.........    /var/lib/rpmpack
.........    /var/lib/rpmpack/content1.txt""",
)

docker_diff(
    name = "centos_withoutbothdirs",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest_withoutbothdirs.rpm && rpm -Vv rpmtest_withoutbothdirs",
    golden = """
.........    /doesnot/exist/rpmpack/content1.txt
.........    /var/lib/rpmpack/content1.txt""",
)

docker_diff(
    name = "centos_withonlyonedir",
    base = ":centos_with_rpm",
    cmd = "echo ===marker===  && rpm -i /root/rpmtest_withonlyonedir.rpm && rpm -Vv rpmtest_withonlyonedir",
    golden = """
.........    /doesnot/exist
.........    /doesnot/exist/rpmpack
.........    /doesnot/exist/rpmpack/content1.txt
.........    /var/lib/rpmpack/content1.txt""",
)
