module(
    name = "rpmpack_example_bazel",
    version = "0.7.1",
)

##############################################################################
# Workaround. By Default the python tool chain does not allow running as root.
# pkg_tar uses this toolchain.
# ughh
# https://github.com/bazelbuild/rules_python/issues/1169
bazel_dep(name = "rules_python", version = "0.37.1")

python = use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python",
)
python.toolchain(
    ignore_root_user_error = True,
    is_default = True,
    python_version = "3.12",
)
# End of workaround.
##############################################################################

bazel_dep(name = "rpmpack")
local_path_override(
    module_name = "rpmpack",
    path = "../",
)

bazel_dep(name = "rules_pkg", version = "1.1.0")
