load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "rpmsample_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/rpmpack/cmd/rpmsample",
    visibility = ["//visibility:private"],
    deps = ["//:rpmpack"],
)

go_binary(
    name = "rpmsample",
    embed = [":rpmsample_lib"],
    visibility = ["//visibility:public"],
)
