load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/google/rpmpack/cmd/tar2rpm",
    visibility = ["//visibility:private"],
    deps = ["//:go_default_library"],
)

go_binary(
    name = "tar2rpm",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
