load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "tar2rpm_lib",
    srcs = ["main.go"],
    importpath = "github.com/google/rpmpack/cmd/tar2rpm",
    visibility = ["//visibility:private"],
    deps = ["//:rpmpack"],
)

go_binary(
    name = "tar2rpm",
    embed = [":tar2rpm_lib"],
    visibility = ["//visibility:public"],
)
